--- a/auth-portal/requirements.txt
+++ b/auth-portal/requirements.txt
@@ -8,6 +8,7 @@ django-oauth-toolkit==1.3.3
 djangorestframework==3.12.2
 idna==2.10
 oauthlib==3.1.0
+python-dotenv==0.15.0
 pytz==2020.4
 requests==2.25.0
 sqlparse==0.4.1
