Add refresh token. Made some review refactoring
* Refactor snake_case variables
* Put some data into virtual environment (client_id, seckret_key, redirect_uri)

--- a/business-app/.gitignore
+++ b/business-app/.gitignore
@@ -242,3 +242,5 @@ pip-selfcheck.json
 .vscode
 # End of https://www.toptal.com/developers/gitignore/api/python,venv,django,react,vscode
 
+*.eslintcache
+package-lock.json
