Add Faker to the fill_db management commands
Now no need to specify the path to the pre-generated surnames and first names

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,6 @@ pythonenv*
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
-source-of-truth/.flake8
+.flake8
 *.txt
 !requirements.txt
