Start making Docker-compose file
Starts db container and use some initial sql scripts to setup the db.
There is still a problem of passing postgres variables like Port and Host, that
are stored as environmental variables, to Django settings code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,27 @@
 # TODO: добавить три приложения и базы данных к ним
+
+version: "3"
+services:
+  db:
+    image: postgres:latest
+    container_name: auth-pg-db
+    restart: always
+    ports:
+      - 5432:5432
+    volumes:
+      - ./docker-db-init-scripts:/docker-entrypoint-initdb.d
+      - ./pg_data:/var/lib/postgresql/data
+  business-app:
+    container_name: auth-business-app
+    restart: always
+    build: 
+      context: ./business-app
+    command: /bin/python3.9 manage.py runserver
+    environment: 
+     DJANGO_SECRET_KEY: lksjauasujoiru0923842jrMKJF
+     DJANGO_DB_HOST: db
+     DJANGO_DB_NAME: postgres
+     DJANGO_DB_USER: postgres
+     DJANGO_DB_PASSWORD: postgres
+    depends_on: 
+      - db
