--- a/business-app/requirements.txt
+++ b/business-app/requirements.txt
@@ -2,6 +2,6 @@ asgiref==3.3.1
 Django==3.1.3
 django-cors-headers==3.5.0
 djangorestframework==3.12.2
-pkg-resources==0.0.0
+psycopg2-binary==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
