--- a/source-of-truth/requirements.txt
+++ b/source-of-truth/requirements.txt
@@ -13,10 +13,12 @@ phonenumbers==8.12.13
 pickleshare==0.7.5
 progress==1.5
 prompt-toolkit==3.0.8
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 ptyprocess==0.6.0
 Pygments==2.7.2
 pytz==2020.4
 sqlparse==0.4.1
 traitlets==5.0.5
 wcwidth==0.2.5
+django-multiselectfield==0.1.12
+libgravatar==0.2.4
